# novae_benchmark

./: .gitignore  README.md  install.md  main.py  pyproject.toml
benchmark/: template.py  trainer.py
benchmark/model/: build.py
config/: benchmark_union_cpu.yml  benchmark_union_local.yml  benchmark_union_ruche.yml
novae_benchmark/: __init__.py  clustering_timing.py  dataset.py  harmony_timing.py  pan_tissue_umap.py  utils.py
novae_benchmark/model/: __init__.py  build.py  cluster_utils.py  eval_utils.py  trainer.py
novae_benchmark/model/GraphST/: __init__.py  graphst_model.py  graphst_module.py  graphst_preprocess.py
novae_benchmark/model/SEDR/: SEDR_model.py  clustering_func.py  graph_func.py  utils_func.py
novae_benchmark/model/STAGATE_pyG/: Train_STAGATE.py  gat_conv.py
novae_benchmark/model/SpaceFlow/: __init__.py  spaceflow_model.py
remote/: cluster_timing.sh  harmony_timing.sh  slurm_main_cpu.sh  umaps.sh  umaps_long.sh
scripts/: train.py
tests/: dummy_dataset.py
